# blobworld

./: .gitignore  .pylintrc  MANIFEST.in  PKGBUILD  README.md  pyproject.toml  setup.py
Documentation/: blobworld.cfg  changelog.md  config.ini  scores.ods
blobclass/: blob_class.py  blobclass.py
blobwork/: blob_work.py
blobworld/: __init__.py  blob.py  blob_world.py  blobworld.py  config.py  highscores.py  hud.py  levels.py  main.py  screens.py  settings.py  sound.py  world.py
blobworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
desktop/: blob_world.desktop  blobworld.desktop
