[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blobworld"
version = "1.4.0"
readme = "README.md"
description = "A blob-eat-blob survival game, written in pygame"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Gavin Lyons", email = "glyons66@hotmail.com" }
]
keywords = ["pygame", "game", "blob", "simulation", "retro", "retro-gaming", "gaming", "blob"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pygame>=2.1",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Games/Entertainment :: Arcade",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
Homepage = "https://github.com/gavinlyonsrepo/blobworld"
Repository = "https://github.com/gavinlyonsrepo/blobworld"
"Bug Tracker" = "https://github.com/gavinlyonsrepo/blobworld/issues"

[project.scripts]
blobworld = "blobworld.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blobworld*"]

[tool.setuptools.package-data]
blobworld = [
    "assets/fonts/*",
    "assets/images/*",
    "assets/sounds/*",
]

[tool.setuptools]
include-package-data = true



